--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "ESNext",
     "target": "es5",
     "jsx": "react",
+    "baseUrl": ".",
     "allowJs": true,
     "moduleResolution": "node",
     // https://www.typescriptlang.org/tsconfig#Interop_Constraints_6252
